k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-loadbalancer
  namespace: todo-app
  labels:
    app: todo-app
  annotations:
    # Cloud provider specific annotations
    # For AWS:
    # service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    # For GCP:
    # cloud.google.com/load-balancer-type: "External"
    # For Azure:
    # service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  selector:
    app: todo-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  # This exposes the service to the public internet
  externalTrafficPolicy: Cluster
